# LLMandFairness

./: README.md  pyproject.toml
docs/: relazione.odt
src/llm_and_fairness/: LLMAndFairnessAdultMain.ipynb  LLMAndFairnessBankMain.ipynb  LLMAndFairnessMain.ipynb  Untitled.ipynb  applogic.py  basesupport.py  chat.py  cleaning.py  datastructures.py  datastructurespandas.py  helper.py  main.py  messageTemplates.json  message_template.json  outputdevice.py  processingfunctions.py  someTests.py  some_test_three.py  some_tests_two.py  support.py  templatemessages.py
src/llm_and_fairness/.ipynb_checkpoints/: chat-checkpoint.py  main-checkpoint.py  messages-checkpoint.py
src/llm_and_fairness/ML/: MLProblemType.py  prediction.py  prediction_repository.py  split.py  split_repository.py
src/llm_and_fairness/appl_logic/: appl_controller.py  appl_controller_test.py  appl_controller_test_bank.py
src/llm_and_fairness/chat/: chat_factory.py  chat_google_langchain.py  chat_model.py  chat_model_langchain.py
src/llm_and_fairness/cleaning/: dataset_cleaner.py  preprocessing.py
src/llm_and_fairness/datasets/: dataset_info.py  dataset_repository.py
src/llm_and_fairness/drawing/: figure.py  matplot_figure.py  statistical_drawer.py  statistical_drawer_factory.py  statistical_drawer_seaborn.py
src/llm_and_fairness/main/: main_llm_and_fairness.py  system_config.py
src/llm_and_fairness/memory/: memory.py  memory_repository.py  memory_service.py
src/llm_and_fairness/messages/: chat_message.py  chat_message_langchain.py  message.py  messageTemplates.json  prompt_support.py  (+6 more)
(+109 files in other folders)
